# mobile-stable-diffusion

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/myopencl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/kernel/: conv2d.cl  cross_attention.cl  elemwise_add.cl  geglu.cl  group_norm.cl  layer_norm.cl  linear.cl  multi_head_attention.cl  up_sample.cl  util.cl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/modules/: DDIMSampler.cpp  DDIMSampler.h  Decoder.cpp  Decoder.h  TextEncoder.cpp  TextEncoder.h  UNetModel.cpp  UNetModel.h  cnpy.cpp  cnpy.h  setting.h  tokenizer.cpp  tokenizer.h  util.cpp  util.h
app/src/main/cpp/modules/kernel/unit/: ConvKernel.cpp  ConvKernel.h  CrossAttentionKernel.cpp  CrossAttentionKernel.h  GEGLUKernel.cpp  GEGLUKernel.h  GroupNormKernel.cpp  GroupNormKernel.h  LayerNormKernel.cpp  LayerNormKernel.h  LinearKernel.cpp  LinearKernel.h  MultiHeadAttentionKernel.cpp  MultiHeadAttentionKernel.h  UpSampleKernel.cpp  UpSampleKernel.h  UtilKernel.cpp  UtilKernel.h
app/src/main/cpp/modules/nn/: AttnBlock.cpp  AttnBlock.h  BasicTransformerBlock.cpp  BasicTransformerBlock.h  Conv2D.cpp  Conv2D.h  CrossAttention.cpp  CrossAttention.h  FeedForward.cpp  FeedForward.h  GEGLU.cpp  GEGLU.h  GroupNorm.cpp  GroupNorm.h  LayerNorm.cpp  LayerNorm.h  Linear.cpp  Linear.h  MultiHeadAttention.cpp  MultiHeadAttention.h  ResBlock.cpp  ResBlock.h  ResidualAttentionBlock.cpp  ResidualAttentionBlock.h  SpatialTransformer.cpp  SpatialTransformer.h  UpSample.cpp  UpSample.h
app/src/main/java/com/example/myopencl/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/myopencl/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
